--- a/getting-started.asciidoc
+++ b/getting-started.asciidoc
@@ -1,38 +1,52 @@
 Getting Started
 ---------------
 
-
-Installing the Couchbase Client Libraries
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-Before you start, you should have Python version 2.6 or later.
-Note that Python versions 3.x are supported as well.
-
-To check your Python version, type the following command:
-
-    shell> python -V
-    Python 2.6.6
-
-Another dependency required is the C client library, `libcouchbase`. Consult
-the documentation [LINK_TO_LIBCOUCHBASE_INSTALL] here.
-
-If you are using Windows, note that `libcouchbase` is bundled in the provided
-Windows installer.
-
-Once libcouchbase is installed, you may proceed to install the `couchbase`
-python packate. This is normally done via the `pip` tool:
-
-    pip install couchbase --quiet
-
-This should not output anything if successful.
+The following chapters will demonstrate how to get started quickly using Couchbase
+with the Python SDK. We'll first show how to install the SDK and then demonstrate
+how it can be used to perform some simple operations.
 
 
-You can try to load your installation by trying to load the module from the
-commandline.
+Download and Installation
+~~~~~~~~~~~~~~~~~~~~~~~~~
 
-    python -c 'import couchbase'
+Follow and install these packages to get started wih using the Python SDK
 
-If successful, should exit and not output anything
+1. http://www.couchbase.com/download[Get, Install, and Start Couchbase server].
+Come back here when you are done.
+
+2. http://www.couchbase.com/develop/c/current[Get and install the C library].
+Note that for Windows users, starting with version 1.0 Beta, the C library
+is bundled with the Python SDK, so you may skip this step.
+
+3. Check your Python version. It should be at least version 2.6 (Python
+versions 3.x are supported as well). To check your python version:
++
+---------------
+shell> python -V
+python 2.6.6.
+---------------
+
+4. Install the Python SDK. The easiest way to do this is via the `pip` tool.
++
+Simply invoke
++
+-------------
+shell> pip install couchbase --quiet
+-------------
++
+If all went well, you should not see any errors printed to the screen.
++
+Alternatively, you may also manually download one of the packages at
+https://pypi.python.org/pypi/couchbase[PyPi]
+
+5. Verify your Python SDK is available and working
++
+------------
+shell> python -c 'import couchbase'
+------------
+If this does not print any errors or exceptions, your Python SDK is properly
+installed!
+
 
 Hello Couchbase
 ~~~~~~~~~~~~~~~
@@ -151,7 +165,7 @@ We will explain the following briefly
 * *Key*
 +
 A key is a unique identifier for your data. Each document must have its unique
-key. The key structure can be any valid `utf-8` string.
+key. The key can be any valid unicode string.
 
 * *Value*
 +
@@ -166,9 +180,24 @@ database based on value contents, as will be explained later.
 Note that it is possible to also store arbitrary Python objects using the
 `FMT_PICKLE` value for the `format` option.
 
+* *Metadata*
++
+This contains information concerning the format of the value (e.g. whether it's
+JSON, Pickle, or something else). It also contains revision information - such
+as the _CAS_, which we'll read about later.
 
-Storing Simple Documents
-^^^^^^^^^^^^^^^^^^^^^^^^
+
+You can _store_ documents by providing the unique _key_ under which the document
+will be stored, and the _value_ which contains the actual document. You can
+_retrieve_ documents either by directly specifying the unique _key_ under which
+the document was stored, or by querying _views_ which will retrieve information
+about documents based on specific _criteria_ - which will yield the
+documents that match it.
+
+
+
+Storing Documents
+^^^^^^^^^^^^^^^^^
 
 This section provides a bit more insight in how to store documents. This is a
 prerequisite to demonstrate how to retrieve documents (as there must be
@@ -307,12 +336,8 @@ Getting the new value
 =================
 
 
-Reading Documents
-^^^^^^^^^^^^^^^^^
-
-
 Getting Documents By Key
-++++++++++++++++++++++++
+^^^^^^^^^^^^^^^^^^^^^^^^
 
 Couchbase allows two ways to fetch your documents: You can retrieve a
 document by its _key_, or you can retrieve a set of documents which
@@ -370,6 +395,7 @@ When using `quiet`, you can still determine if a key was retrieved successfuly
 by examining the `success` property of the value object
 
 [source,python]
+.Passing `quiet` to `get`
 ------------------------------------------------
 result = client.get("non-exist-key", quiet=True)
 if result.success:
@@ -379,11 +405,28 @@ else:
            "Result was received with code"), result.rc
 ------------------------------------------------
 
+Or
+
+[source,python]
+.Setting `quiet` in the constructor
+------------------------------------------------
+client = Couchbase.connect(bucket='default', quiet=True)
+result = client.get("non-exist-key")
+if result.success:
+    print "Got document OK"
+else:
+    print "Couldn't retrieve document"
+------------------------------------------------
+
 The `rc` property of the `Result` object contains the error code received
 on failure (on success, its value is `0`). You can also obtain the exception
 class which would have been thrown by using 
 
-    `CouchbaseError.rc_to_exctype(result.rc)`
+[source,python]
+------------------------
+>>> CouchbaseError.rc_to_exctype(result.rc)
+<class 'couchbase.exceptions.NotFoundError'>
+------------------------
 
 This class method is passed an error code and produces the appropriate
 exception class.
@@ -402,13 +445,14 @@ if not results.all_ok:
 ==============================
 
 
-Getting Documents by Views
-++++++++++++++++++++++++++
+Getting Documents by Querying Views
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 In addition to fetching documents by keys, you may also employ _Views_ to retrieve
 information using secondary indexes. This guide gets you started on how to use
-them from the Python SDK. If you want to learn more about views, see the <link?>
-server manual.
+them from the Python SDK. If you want to learn more about views, see the
+http://www.couchbase.com/docs/couchbase-manual-2.0/couchbase-views.html[
+chapter in the Couchbase Server 2.0 documentation]
 
 First, create your view definition using the web UI (though you may also do
 this directly from the Python SDK, as will be shown later).
@@ -435,8 +479,15 @@ In addition to passing the design and view name, the `query` method accepts
 additional keyword arguments which control the behavior of the results
 returned. You may thus use it like so:
 
-    results = client.query("beer", "brewery_beers", opt1=value1, opt2=value2, ...)
+[source,python]
+----------------------
+results = client.query("beer", "brewery_beers", opt1=value1, opt2=value2, ...)
+for result in results:
+    # do something with result..
+----------------------
 
+Here are some of the available parameters for the `query` method. A full listing
+may be found in the API documentation.
 
 * `include_docs`
 +
@@ -483,9 +534,13 @@ Here's a more extensive example
 ------------------------------------------------------------
 results = client.query("beer", "brewery_beers",
                        include_docs=True, limit=5)
+
 for result in results:
     print "key is %r" % (result.key)
-    # We'd print the document too, but this can be rather large
+    doc = result.doc.value
+    if doc['type'] == "beer":
+        print "Got a beer. It's got %0.2f ABV" % (doc['abv'],)
+
 ------------------------------------------------------------
 
 
@@ -573,8 +628,10 @@ pprint.pprint(c.get("a_python_set").value)
 
 Outputs:
 
-    <object object at 0x7fa7d0ad80e0>
-    set([1, 2, 3])
+-------------------
+<object object at 0x7fa7d0ad80e0>
+set([1, 2, 3])
+-------------------
 
 
 You can also store arbitrary strings of bytes by using `FMT_BYTES`
